# examples

static_index/: Cargo.toml
static_index/src/: main.rs
