[package]
name = "static_index"
version = "2.0.0"
authors = ["Jose Marinez <digeratus@gmail.com>"]
workspace = ".."
edition = "2018"

[dependencies]
futures = "0.3.1"
env_logger = "0.6"

actix-web = { version = "2.0.0-rc", features = [ "openssl" ] }
actix-files = "0.2.0"
actix-rt = "1.0.0"
jemallocator = "0.3.2"
openssl = "0.10"
